--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   </head>
   <body>
     <div id="content">
-<h1>Bro, It's the Faceobok Graph !</h1>
+<h1>It's the Facebook Graph, Bro!</h1>
 
 <p><a href="http://github.com/criso/fbgraph">FBgraph</a> is a nodejs module that provides easy access to the facebook graph api</p>
 
 <h2>About</h2>
 
 <p>I created this, because I wanted to access FB's graph from <code>node</code>. <br />
-  The libraries I found felt clunky to me, and I needed an excuse to create a node module.</p>
+  The libraries I found, felt clunky to me, and I needed an excuse to create a node module.</p>
 
 <h2>Oh nooooooesss</h2>
 
@@ -115,8 +115,8 @@ response will return <code>true</code> or <code>false</code></p>
 
 <h2>Running tests</h2>
 
-<p>Add your Facebook <code>appId</code> and <code>appSecret</code> to <strong>tests/config.js</strong> <br />
-(this is needed to create <code>test users</code> and to get a test <code>access_token</code>)</p>
+<p>Before running the test suite, add your Facebook <code>appId</code> and <code>appSecret</code> to <code>tests/config.js</code> <br />
+ This is needed to create <code>test users</code> and to get a test <code>access_token</code></p>
 
 <pre><code>$ npm install &amp;&amp; npm test
 </code></pre>
