--- a/index.html
+++ b/index.html
@@ -10,31 +10,49 @@
 
 <p><a href="http://github.com/criso/fbgraph">FBgraph</a> is a nodejs module that provides easy access to the facebook graph api</p>
 
-<h2>About</h2>
+<h2>Oh nooooooesss - MOAR facebook</h2>
 
 <p>I created this, because I wanted to access FB's graph from <code>node</code>. <br />
   The libraries I found, felt clunky to me, and I needed an excuse to create a node module.</p>
 
-<h2>Oh nooooooesss</h2>
-
-<p>This library <strong>doesn't</strong> provide any <strong>facebook authentication</strong>.</p>
-
-<p>Usually authentication happens in lots of flavours <code>facebook</code>, <code>twitter</code>, <code>your own!</code>. <br />
-  Since this problem has already been solved by a variety of modules such as <code>everyauth</code>or <code>connect-auth</code> <br />
-  I decided not to account for it here.</p>
-
 <h2>Installation via npm</h2>
 
-<pre><code>$ npm install fbgraph  
+<pre><code>$ npm install fbgraph
 
 var graph = require('fbgraph');
 </code></pre>
 
-<h2>Setting an access token</h2>
+<h2>Authentication</h2>
 
-<p>Before making calls that require an <code>access token</code> be sure to set the token</p>
+<p>If you get an accesstoken via some other Oauth module like <a href="https://github.com/bnoguchi/everyauth">everyauth</a> , 
+<a href="https://github.com/ciaranj/connect-auth">connect-auth</a> or <a href="https://github.com/ciaranj/node-oauth">node-oauth</a> you can just set <br />
+the access token directly. Most <code>get</code> calls, and pretty much all <code>post</code> calls will require an <code>access_token</code></p>
 
-<pre><code>graph.setAccessToken(accessToken);
+<pre><code>graph.setAccessToken(access_token);
+</code></pre>
+
+<p>This is how you would get authenticated using only the <code>fbgraph</code> module.
+More details below on the <strong>express app</strong> section</p>
+
+<pre><code>// get authorization url
+var authUrl = graph.getOauthUrl({
+  "client_id":       conf.client_id
+  , "redirect_uri":  conf.redirect_uri
+});
+
+// shows dialog
+res.redirect(authUrl);
+
+// after user click, auth `code` will be set
+// we'll send that and get the access token
+graph.authorize({
+    "client_id":        conf.client_id
+  , "redirect_uri":   conf.redirect_uri
+  , "client_secret":  conf.client_secret
+  , "code":           req.query.code
+}, function (err, facebookRes) {
+  res.redirect('/loggedIn');
+});
 </code></pre>
 
 <h2>Read data from the Graph Api</h2>
@@ -113,12 +131,100 @@ response will return <code>true</code> or <code>false</code></p>
 });
 </code></pre>
 
+<h2>Rockin' it on an Express App</h2>
+
+<p>This example assumes that you have a link on the main page <code>/</code> that points to <code>/auth/facebook</code>. <br />
+The user will click this link and get into the facebook authorization flow ( if the user hasn't already connected) <br />
+After <code>authorizing</code> the app the user will be redirected to <code>/UserHasLoggedIn</code>  </p>
+
+<pre><code>/**
+ * Module dependencies.
+ */
+
+var express   = require('express')
+, graph     = require('fbgraph')
+, app       = module.exports = express.createServer();
+
+// this should really be in a config file!
+var conf = {
+  client_id:        'YOUR FACEBOOK APP ID'
+  , client_secret:  'YOU FACEBOOK APP SECRET'
+  , scope:          'email, user_about_me, user_birthday, user_location, publish_stream'
+  , redirect_uri:   'http://localhost:3000/auth/facebook'
+};
+
+// Configuration
+
+app.configure(function(){
+  app.set('views', __dirname + '/views');
+  app.set('view engine', 'jade');
+  app.use(express.bodyParser());
+  app.use(express.methodOverride());
+  app.use(app.router);
+  app.use(express.static(__dirname + '/public'));
+});
+
+app.configure('development', function(){
+  app.use(express.errorHandler({ dumpExceptions: true, showStack: true })); 
+});
+
+app.configure('production', function(){
+  app.use(express.errorHandler());
+});
+
+// Routes
+
+app.get('/', function(req, res){
+  res.render("index", { title: "click link to connect" });
+});
+
+app.get('/auth/facebook', function(req, res) {
+
+  // we don't have a code yet
+  // so we'll redirect to the oauth dialog
+  if (!req.query.code) {
+    var authUrl = graph.getOauthUrl({
+      "client_id":       conf.client_id
+      , "redirect_uri":  conf.redirect_uri
+    });
+
+    res.redirect(authUrl);
+
+    return;
+  }
+
+  // auth `code` is set
+  // we'll send that and get the access token
+  graph.authorize({
+    "client_id":        conf.client_id
+    , "redirect_uri":   conf.redirect_uri
+    , "client_secret":  conf.client_secret
+    , "code":           req.query.code
+  }, function (err, facebookRes) {
+    res.redirect('/loggedIn');
+  });
+
+});
+
+// user gets sent here after being authorized
+app.get('/UserHasLoggedIn', function(req, res) {
+  res.render("index", { title: "Logged In" });
+});
+
+
+var port = process.env.PORT || 3000;
+app.listen(port, function() {
+  console.log("Express server listening on port %d", port);
+});
+</code></pre>
+
 <h2>Running tests</h2>
 
 <p>Before running the test suite, add your Facebook <code>appId</code> and <code>appSecret</code> to <code>tests/config.js</code> <br />
  This is needed to create <code>test users</code> and to get a test <code>access_token</code></p>
 
-<pre><code>$ npm install &amp;&amp; npm test
+<pre><code>$ npm install
+$ make test
 </code></pre>
 
 <p><em>Tests might fail if the Facebook api has an issue.</em></p>
