Adding FQL support

--- a/head.html
+++ b/head.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FBGraph - Stay classy facebook</title>
+    <title>FBGraph - Stay Classy Facebook</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
